Decoder model for inference

--- a/Running_SLT.ipynb
+++ b/Running_SLT.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Select the GPU ID to work or -1 to CPU: 1\n",
-      "Already up to date.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@title Initial config for notebooks { display-mode: \"form\" }\n",
     "import os\n",
@@ -67,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +149,7 @@
     "            pretrained=None,#'vgg16',\n",
     "            optimizer='adam',\n",
     "            type_frames='jpg/',\n",
-    "            batchSize=1,\n",
+    "            batchSize=2,\n",
     "            epochs=20,\n",
     "            nIters=10.0,\n",
     "            lr=0.001,\n",
@@ -168,7 +159,7 @@
     "            path2save='../Saved_Models/', #'/content/drive/My Drive/Models/SLT/<experiment_folder>'\n",
     "            name='SLT_Model',\n",
     "            data= '../DataSets/boston201/data/', #'/content/data/boston201/data/',\n",
-    "            prefetch_batch_buffer = 5\n",
+    "            prefetch_batch_buffer = -1\n",
     "           )"
    ]
   },
@@ -271,15 +262,17 @@
     "train_data = tf.data.Dataset.from_generator(train_gen_sampling, ((tf.float32, tf.int64), tf.int64),\n",
     "    ((args.inputShape, args.max_len_sentence-1), args.max_len_sentence-1))\n",
     "\n",
-    "train_data = train_data.cache().map(scale, -1)\n",
+    "train_data = train_data.cache().map(scale_0_255, -1)\n",
     "train_data = train_data.shuffle(318, reshuffle_each_iteration=True).batch(args.batchSize)\n",
     "train_data = train_data.prefetch(args.prefetch_batch_buffer)\n",
     "\n",
     "test_data = tf.data.Dataset.from_generator(test_gen_sampling, ((tf.float32, tf.int64), tf.int64),\n",
     "    ((args.inputShape, args.max_len_sentence-1), args.max_len_sentence-1))\n",
     "\n",
-    "test_data = test_data.cache().map(scale,24)\n",
-    "test_data = test_data.shuffle(84, reshuffle_each_iteration=True).batch(args.batchSize).prefetch(args.prefetch_batch_buffer)"
+    "test_data = test_data.cache().map(scale_0_255, -1)\n",
+    "test_data = test_data.shuffle(84, reshuffle_each_iteration=True).batch(args.batchSize).prefetch(args.prefetch_batch_buffer)\n",
+    "\n",
+    "train_data, test_data"
    ]
   },
   {
@@ -291,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,11 +333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tf.keras.utils.plot_model(decoder, to_file=args.name+'.png', show_shapes=True)"
+    "tf.keras.utils.plot_model(decoder, to_file='SLT_decoder.png', show_shapes=True)"
    ]
   },
   {
@@ -417,7 +410,6 @@
     "# In the same way opt, loss, acc and acc_mask are defined before hand with that names.\n",
     "# Finally vocab must be define before hand too for eval step\n",
     "\n",
-    "@tf.function\n",
     "def train_step(video, sentence, target):\n",
     "    \"\"\"Function to make a train step with encoder and decoder models.\n",
     "    Args:\n",
@@ -429,23 +421,21 @@
     "    tf.keras.backend.set_learning_phase(True)\n",
     "    sentence_loss = 0\n",
     "    predictions = []\n",
-    "    with tf.device('/GPU:0'):\n",
-    "        with tf.GradientTape() as tape:\n",
-    "            red_feat, enc_output, lstm1_h, lstm1_c, lstm2_h, lstm2_c = encoder(video)\n",
-    "            for word_idx in tf.range(0, sentence.shape[1]):\n",
-    "                prediction, lstm1_h, lstm1_c, lstm2_h, lstm2_c = decoder([tf.expand_dims(sentence[word_idx], axis=1), \n",
-    "                    lstm1_h, lstm1_c, lstm2_h, lstm2_c, red_feat, enc_output])\n",
-    "            \n",
-    "                sentence_loss += loss(target[word_idx], prediction)\n",
-    "                predictions.append(prediction)\n",
-    "                \n",
-    "        variables = encoder.trainable_variables + decoder.trainable_variables\n",
-    "        gradients = tape.gradient(sentence_loss, variables)\n",
-    "        opt.apply_gradients(zip(gradients, variables))\n",
-    "    \n",
-    "    return sentence_loss, predictions\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        red_feat, enc_output, lstm1_h, lstm1_c, lstm2_h, lstm2_c = encoder(video)\n",
+    "        for word_idx in tf.range(0, sentence.shape[1]):\n",
+    "            prediction, lstm1_h, lstm1_c, lstm2_h, lstm2_c = decoder([tf.expand_dims(sentence[:,word_idx], axis=1), \n",
+    "                lstm1_h, lstm1_c, lstm2_h, lstm2_c, red_feat, enc_output])\n",
     "\n",
-    "@tf.function\n",
+    "            sentence_loss += loss(target[:, word_idx], prediction)\n",
+    "            predictions.append(prediction)\n",
+    "\n",
+    "    variables = encoder.trainable_variables + decoder.trainable_variables\n",
+    "    gradients = tape.gradient(sentence_loss, variables)\n",
+    "    opt.apply_gradients(zip(gradients, variables))\n",
+    "    \n",
+    "    return sentence_loss, tf.concat(predictions, axis=1)\n",
+    "\n",
     "def eval_step(video):\n",
     "    \"\"\"Function to make a eval step with encoder and decoder models.\n",
     "    Args:\n",
@@ -454,19 +444,18 @@
     "    # Set the model in training phase\n",
     "    tf.keras.backend.set_learning_phase(False)\n",
     "    predictions = []\n",
-    "    with tf.device('/GPU:0'):\n",
-    "        red_feat, enc_output, lstm1_h, lstm1_c, lstm2_h, lstm2_c = encoder(video)\n",
-    "        word = vocab.word_index['<s>']\n",
-    "        for _ in tf.range(0, args.max_len_sentence-1):\n",
-    "            prediction, lstm1_h, lstm1_c, lstm2_h, lstm2_c = decoder([tf.reshape(word, [1,1]), \n",
-    "                lstm1_h, lstm1_c, lstm2_h, lstm2_c, red_feat, enc_output])\n",
-    "            \n",
-    "            word = tf.squeeze(tf.argmax(prediction, axis=1))\n",
-    "            predictions.append(word)\n",
-    "            if tf.equal(vocab.index_word[word], '</s>'):\n",
-    "                break\n",
+    "    red_feat, enc_output, lstm1_h, lstm1_c, lstm2_h, lstm2_c = encoder(video)\n",
+    "    word = vocab.word_index['<s>']\n",
+    "    for _ in tf.range(0, args.max_len_sentence-1):\n",
+    "        prediction, lstm1_h, lstm1_c, lstm2_h, lstm2_c = decoder([tf.reshape(word, [1,1]), \n",
+    "            lstm1_h, lstm1_c, lstm2_h, lstm2_c, red_feat, enc_output])\n",
+    "\n",
+    "        word = tf.squeeze(tf.argmax(prediction, axis=1))\n",
+    "        predictions.append(word)\n",
+    "        if tf.equal(vocab.index_word[word], '</s>'):\n",
+    "            break\n",
     "    \n",
-    "    return predictions"
+    "    return tf.concat(predictions, axis=1)"
    ]
   },
   {
@@ -482,8 +471,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer=opt, loss=SparseCategoricalCrossentropy_mask, metrics=[real_acc,\n",
-    "    tf.keras.metrics.SparseCategoricalAccuracy(name=\"acc\")])"
+    "# model.compile(optimizer=opt, loss=SparseCategoricalCrossentropy_mask, metrics=[real_acc,\n",
+    "#     tf.keras.metrics.SparseCategoricalAccuracy(name=\"acc\")])"
    ]
   },
   {
@@ -492,22 +481,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(x = train_data, \n",
-    "          epochs=args.epochs,\n",
-    "          callbacks=calls,\n",
-    "          validation_data=test_data)\n",
-    "\n",
     "for epoch in range(args.epochs):\n",
     "    # Train phase\n",
     "    step = 1\n",
-    "    for xy, y_true in train_data:\n",
+    "    for xy, y_true in train_data.take(1):\n",
     "        batch_loss, batch_predictions = train_step(xy[0], xy[1], y_true)\n",
     "        \n",
     "        clear_output(wait=True)\n",
     "        print(\"Step:\", step*args.batchSize, \"Learning rate:\", opt.lr.numpy())\n",
-    "        print(\"Epoch:\", train_epoch+1, \"Train batch:\", step)\n",
+    "        print(\"Epoch:\", epoch+1, \"Train batch:\", step)\n",
     "        print(\"Train_Loss: \",batch_loss.numpy())\n",
-    "        print(\"Train_Accuracy: \",acc(y_true, batch_predictions))"
+    "        print(\"Train_Accuracy: \",acc(y_true, batch_predictions).numpy())\n",
+    "        step += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_predictions = train_step(xy[0], xy[1], y_true)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc(y_true, tf.concat(batch_predictions, axis=1)).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_indexes = tf.argmax(batch_predictions, axis=-1)\n",
+    "    \n",
+    "mask = tf.math.logical_not(tf.math.equal(y_true, 0))\n",
+    "mask = tf.cast(mask, dtype=pred_indexes.dtype)\n",
+    "\n",
+    "pred_indexes = tf.multiply(pred_indexes, mask)\n",
+    "\n",
+    "equals = tf.math.equal(tf.cast(y_true, pred_indexes.dtype), pred_indexes)\n",
+    "# return tf.math.reduce_mean(tf.cast(equals, tf.float32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.argmax(batch_predictions, axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.argmax(tf.concat(batch_predictions, axis=1), axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = decoder.get_layer(\"dense_qk_sta\").output\n",
+    "b = decoder.get_layer(\"input_feat_enc\").output\n",
+    "a, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.multiply(a, b)"
    ]
   },
   {
