--- a/Running_SLT.ipynb
+++ b/Running_SLT.ipynb
@@ -337,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.keras.utils.plot_model(decoder, to_file='SLT_decoder.png', show_shapes=True)"
+    "#tf.keras.utils.plot_model(decoder, to_file='SLT_decoder.png', show_shapes=True)"
    ]
   },
   {
@@ -406,6 +406,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "vocab.word_index['<s>']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# The encoder, decoder models must be defined before hand with that names.\n",
     "# In the same way opt, loss, acc and acc_mask are defined before hand with that names.\n",
     "# Finally vocab must be define before hand too for eval step\n",
@@ -445,7 +454,7 @@
     "    tf.keras.backend.set_learning_phase(False)\n",
     "    predictions = []\n",
     "    red_feat, enc_output, lstm1_h, lstm1_c, lstm2_h, lstm2_c = encoder(video)\n",
-    "    word = vocab.word_index['<s>']\n",
+    "    word = tf.tile([[vocab.word_index['<s>']]], [video.shape[0], 1])\n",
     "    for _ in tf.range(0, args.max_len_sentence-1):\n",
     "        prediction, lstm1_h, lstm1_c, lstm2_h, lstm2_c = decoder([tf.reshape(word, [1,1]), \n",
     "            lstm1_h, lstm1_c, lstm2_h, lstm2_c, red_feat, enc_output])\n",
@@ -471,20 +480,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.compile(optimizer=opt, loss=SparseCategoricalCrossentropy_mask, metrics=[real_acc,\n",
-    "#     tf.keras.metrics.SparseCategoricalAccuracy(name=\"acc\")])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for epoch in range(args.epochs):\n",
     "    # Train phase\n",
     "    step = 1\n",
-    "    for xy, y_true in train_data.take(1):\n",
+    "    for xy, y_true in train_data:\n",
     "        batch_loss, batch_predictions = train_step(xy[0], xy[1], y_true)\n",
     "        \n",
     "        clear_output(wait=True)\n",
