Fixing eval and train step

--- a/Running_SLT.ipynb
+++ b/Running_SLT.ipynb
@@ -279,7 +279,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Network instance"
+    "## Network instances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoder"
    ]
   },
   {
@@ -288,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Entradas del encoder\n",
+    "# Encoder inputs\n",
     "input_video = tf.keras.Input(shape=args.inputShape, name=\"input_video\")\n",
     "\n",
     "# Compute features and reduce features\n",
@@ -300,12 +307,26 @@
     "    args.unitsEmbedding, args.dropout, args.recurrent_dropout)\n",
     "x1 = self_attentions.self_attention_v1_0(x1)\n",
     "\n",
-    "# Modelo encoder\n",
+    "# Model\n",
     "encoder = tf.keras.Model(inputs=[input_video], \n",
     "    outputs=[x, x1, lstm1_enc_h, lstm1_enc_c, lstm2_enc_h, lstm2_enc_c], \n",
-    "    name=\"SLT_encoder\")\n",
-    "\n",
-    "# Entradas del decoder\n",
+    "    name=\"SLT_encoder\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decoder inputs\n",
     "input_word = tf.keras.Input(shape=[1], name=\"input_word\") # Entra palabra por palabra\n",
     "input_x = tf.keras.Input(shape=x.shape[1:], name=\"input_feat_enc\") # Entrada de las reduce features del encoder\n",
     "input_x1 = tf.keras.Input(shape=x1.shape[1:], name=\"input_sea_enc\") # Entrada de la self attention del encoder\n",
@@ -325,6 +346,7 @@
     "# Output of the network\n",
     "x_final = output.output_v1_0(x2, x3, args.vocab_size)\n",
     "\n",
+    "# Model\n",
     "decoder = tf.keras.Model(inputs=[input_word, input_lstm1_h, input_lstm1_c, input_lstm2_h, input_lstm2_c, \n",
     "    input_x, input_x1], \n",
     "    outputs=[x_final, lstm1_dec_h, lstm1_dec_c, lstm2_dec_h, lstm2_dec_c], \n",
@@ -397,16 +419,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train and eval step"
+    "### Steps"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "vocab.word_index['<s>']"
+    "#### Train"
    ]
   },
   {
@@ -443,28 +463,49 @@
     "    gradients = tape.gradient(sentence_loss, variables)\n",
     "    opt.apply_gradients(zip(gradients, variables))\n",
     "    \n",
-    "    return sentence_loss, tf.concat(predictions, axis=1)\n",
-    "\n",
+    "    return sentence_loss, tf.concat(predictions, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def eval_step(video):\n",
     "    \"\"\"Function to make a eval step with encoder and decoder models.\n",
     "    Args:\n",
-    "        video: The video batched to insert in encoder model.\n",
+    "        video: The video batched to insert in encoder model. Batch size must be 1\n",
     "    \"\"\"\n",
-    "    # Set the model in training phase\n",
-    "    tf.keras.backend.set_learning_phase(False)\n",
-    "    predictions = []\n",
-    "    red_feat, enc_output, lstm1_h, lstm1_c, lstm2_h, lstm2_c = encoder(video)\n",
-    "    word = tf.tile([[vocab.word_index['<s>']]], [video.shape[0], 1])\n",
-    "    for _ in tf.range(0, args.max_len_sentence-1):\n",
-    "        prediction, lstm1_h, lstm1_c, lstm2_h, lstm2_c = decoder([tf.reshape(word, [1,1]), \n",
-    "            lstm1_h, lstm1_c, lstm2_h, lstm2_c, red_feat, enc_output])\n",
+    "    # Check batch size with value of 1\n",
+    "    if video.shape[0] != 1:\n",
+    "        raise ValueError('You must eval a video alone, in other words, you must have '\n",
+    "            'batch size of 1. Batch size found of {}'.format(video.shape[0])\n",
+    "        )\n",
+    "    else:\n",
+    "        # Set the model in training phase\n",
+    "        tf.keras.backend.set_learning_phase(False)\n",
+    "        predictions = []\n",
+    "        red_feat, enc_output, lstm1_h, lstm1_c, lstm2_h, lstm2_c = encoder(video)\n",
+    "        word = tf.reshape(vocab.word_index['<s>'],[1,1])\n",
+    "        for _ in tf.range(0, args.max_len_sentence-1):\n",
+    "            prediction, lstm1_h, lstm1_c, lstm2_h, lstm2_c = decoder([tf.reshape(word, [1,1]), \n",
+    "                lstm1_h, lstm1_c, lstm2_h, lstm2_c, red_feat, enc_output])\n",
     "\n",
-    "        word = tf.squeeze(tf.argmax(prediction, axis=1))\n",
-    "        predictions.append(word)\n",
-    "        if tf.equal(vocab.index_word[word], '</s>'):\n",
-    "            break\n",
-    "    \n",
-    "    return tf.concat(predictions, axis=1)"
+    "            word = tf.squeeze(tf.argmax(prediction, axis=-1))\n",
+    "            print(word)\n",
+    "            predictions.append(word)\n",
+    "            if tf.equal(vocab.index_word[word.numpy()], '</s>'):\n",
+    "                break\n",
+    "\n",
+    "        return tf.stack(predictions, axis=0)"
    ]
   },
   {
@@ -492,88 +533,6 @@
     "        print(\"Train_Loss: \",batch_loss.numpy())\n",
     "        print(\"Train_Accuracy: \",acc(y_true, batch_predictions).numpy())\n",
     "        step += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch_predictions = train_step(xy[0], xy[1], y_true)[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acc(y_true, tf.concat(batch_predictions, axis=1)).numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pred_indexes = tf.argmax(batch_predictions, axis=-1)\n",
-    "    \n",
-    "mask = tf.math.logical_not(tf.math.equal(y_true, 0))\n",
-    "mask = tf.cast(mask, dtype=pred_indexes.dtype)\n",
-    "\n",
-    "pred_indexes = tf.multiply(pred_indexes, mask)\n",
-    "\n",
-    "equals = tf.math.equal(tf.cast(y_true, pred_indexes.dtype), pred_indexes)\n",
-    "# return tf.math.reduce_mean(tf.cast(equals, tf.float32))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.argmax(batch_predictions, axis=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.argmax(tf.concat(batch_predictions, axis=1), axis=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = decoder.get_layer(\"dense_qk_sta\").output\n",
-    "b = decoder.get_layer(\"input_feat_enc\").output\n",
-    "a, b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.multiply(a, b)"
    ]
   },
   {
